# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: body_game.py  body_games.py  brain_calc.py  brain_even.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/games/user_dialogs/: user.py
